; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264chroma_msa.c_avc_chroma_vt_4x2_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264chroma_msa.c_avc_chroma_vt_4x2_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32)* @avc_chroma_vt_4x2_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avc_chroma_vt_4x2_msa(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @__msa_fill_b(i32 %21)
  store i32 %22, i32* %18, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @__msa_fill_b(i32 %23)
  store i32 %24, i32* %19, align 4
  %25 = load i32, i32* %18, align 4
  %26 = load i32, i32* %19, align 4
  %27 = call i64 @__msa_ilvr_b(i32 %25, i32 %26)
  store i64 %27, i64* %20, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* %8, align 4
  %30 = load i64, i64* %11, align 8
  %31 = load i64, i64* %12, align 8
  %32 = load i64, i64* %13, align 8
  %33 = call i32 @LD_UB3(i32* %28, i32 %29, i64 %30, i64 %31, i64 %32)
  %34 = load i64, i64* %12, align 8
  %35 = load i64, i64* %11, align 8
  %36 = load i64, i64* %13, align 8
  %37 = load i64, i64* %12, align 8
  %38 = load i64, i64* %14, align 8
  %39 = load i64, i64* %15, align 8
  %40 = call i32 @ILVR_B2_UB(i64 %34, i64 %35, i64 %36, i64 %37, i64 %38, i64 %39)
  %41 = load i64, i64* %15, align 8
  %42 = trunc i64 %41 to i32
  %43 = load i64, i64* %14, align 8
  %44 = trunc i64 %43 to i32
  %45 = call i64 @__msa_ilvr_d(i32 %42, i32 %44)
  store i64 %45, i64* %14, align 8
  %46 = load i64, i64* %14, align 8
  %47 = load i64, i64* %20, align 8
  %48 = call i32 @__msa_dotp_u_h(i64 %46, i64 %47)
  store i32 %48, i32* %17, align 4
  %49 = load i32, i32* %17, align 4
  %50 = shl i32 %49, 3
  store i32 %50, i32* %17, align 4
  %51 = load i32, i32* %17, align 4
  %52 = call i64 @__msa_srari_h(i32 %51, i32 6)
  %53 = trunc i64 %52 to i32
  store i32 %53, i32* %17, align 4
  %54 = load i32, i32* %17, align 4
  %55 = call i32 @__msa_sat_u_h(i32 %54, i32 7)
  store i32 %55, i32* %17, align 4
  %56 = load i32, i32* %17, align 4
  %57 = load i32, i32* %17, align 4
  %58 = call i64 @__msa_pckev_b(i32 %56, i32 %57)
  store i64 %58, i64* %16, align 8
  %59 = load i64, i64* %16, align 8
  %60 = load i32*, i32** %7, align 8
  %61 = load i32, i32* %8, align 4
  %62 = call i32 @ST_W2(i64 %59, i32 0, i32 1, i32* %60, i32 %61)
  ret void
}

declare dso_local i32 @__msa_fill_b(i32) #1

declare dso_local i64 @__msa_ilvr_b(i32, i32) #1

declare dso_local i32 @LD_UB3(i32*, i32, i64, i64, i64) #1

declare dso_local i32 @ILVR_B2_UB(i64, i64, i64, i64, i64, i64) #1

declare dso_local i64 @__msa_ilvr_d(i32, i32) #1

declare dso_local i32 @__msa_dotp_u_h(i64, i64) #1

declare dso_local i64 @__msa_srari_h(i32, i32) #1

declare dso_local i32 @__msa_sat_u_h(i32, i32) #1

declare dso_local i64 @__msa_pckev_b(i32, i32) #1

declare dso_local i32 @ST_W2(i64, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
